dex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex
  annotations:
    linkerd.io/inject: enabled
