dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  selector:
    app: dex
  type: ClusterIP
  ports:
  - port: 5556
    targetPort: 5556
    protocol: TCP
    name: dex
